[package]
name = "javy-bless-plugins"
version = "0.2.3"
authors = ["zees-dev"]
description = "javy bless plugins"
keywords = ["javy", "bless", "plugins"]
readme = "README.md"
edition = "2021"
license = "MIT/Apache-2.0"
repository = "https://github.com/blessnetwork/javy-bless-plugins"

[lib]
name = "bless_plugins"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
blockless-sdk = { version = "0.1.10" }
javy-plugin-api = { version = "3.0.0", features = ["json"] }
rand = "0.8.5"
serde_json = "1.0.120"
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.12"

[profile.release]
lto = true
opt-level = 3

[features]
crypto = []
fetch = []
llm = []
crawl = []
wasip1 = []
default = ["crypto", "fetch", "crawl", "wasip1"]

[patch.crates-io]
blockless-sdk = { git = "https://github.com/blocklessnetwork/sdk-rust", rev = "1e9295fb" }
